if(NOT TARGET gtest_main)
    add_subdirectory(googletest)
    set_target_properties(gtest_main PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gtest PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock_main PROPERTIES FOLDER Vendors/googletest)
endif()

if(NOT TARGET cuda_common)
    file(GLOB cuda_common_sources CONFIGURE_DEPENDS  "${VENDORS_DIR}/cuda-samples/Common/*.h")
    add_library(cuda_common INTERFACE ${cuda_common_sources})
    target_include_directories(cuda_common INTERFACE ${VENDORS_DIR}/cuda-samples/Common)
    set_target_properties(cuda_common PROPERTIES FOLDER Vendors/cuda_common)
endif()